Replace get index zero with getFirst method of List objects